# visual_servoing_ardrone

./: CMakeLists.txt  package.xml
Sample_camera_calibs/ardrone2_bottom/: ardrone_bottom.yml  ost.ini
Sample_camera_calibs/ardrone2_front/: cal.yml  ost.ini
config/: twist_mux_locks.yaml  twist_mux_topics.yaml  zerotwist_priority.yaml
launch/: april14th.launch  april15th.launch  ardrone.launch  bag_playback.launch  imageview.launch  indiv_track.launch  mux_test.launch  nokeyboard_test.launch  opti.launch  posrpy_display.launch  r.launch  roomba_ardrone.launch  roomba_sine.launch  rosbag_test.launch  t.launch  test_ardrone.launch  test_ardrone_artrack.launch  test_ardrone_novsoutput.launch  test_ardrone_z.launch  test_ardrone_z.launch~  test_velacc.launch  testing_stuff.launch  vicon.launch
msg/: StampedFloat.msg
src/: .combine_floats.cpp.swp  .listener.cpp.swp  .transform_listener.cpp.swp  ALMOST_vrpn_rebroadcast_arbitrary_numbers.cpp  PoseStamped_split.cpp  combine_floats.cpp  combine_floats_float.cpp  combine_floats_vo.cpp  combine_floats_z_only.cpp  failed_experiment_merge_to_twist.cpp  filter_empty_msgs.cpp  image_converter.cpp  listen_to_rpy.cpp  listener.cpp  listener.cpp~  listener_working.cpp  newtest.cpp  newtest_original.cpp  orig_tag_detect.cpp  origvicon.cpp  parser.cpp  parser_working.cpp  pos_rpy_display.cpp  quat_to_rpy.cpp  roomba_acc.cpp  roomba_acc_stamped.cpp  roomba_vel.cpp  setpoints.cpp  setpoints_tag.cpp  simplepub.cpp  simpletest.cpp  tag_detect.cpp  tag_detect2.cpp  tag_detect_float.cpp  tag_detect_jmod.cpp  talker.cpp  talker_multiple.cpp  testing.cpp  testing2.cpp  testing_working.cpp  (+8 more)
